unpackaged/main/default/objects/Mandatory_training__c/Mandatory_training__c.object-meta.xml
<CustomObject>
    <label>Mandatory training</label>
    <nameField>
        <displayFormat>MT-{0000}</displayFormat>
        <label>Mandatory training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mandatory trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>