unpackaged/main/default/objects/Mandatory_training__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <formula>"Show &amp; Add"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action</label>
    <type>Text</type>
</CustomField>