unpackaged/main/default/objects/Mandatory_training__c/fields/Formation__c.field-meta.xml
<CustomField>
    <fullName>Formation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Formation</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Mandatory trainings</relationshipLabel>
    <relationshipName>Mandatory_trainings</relationshipName>
    <type>Lookup</type>
</CustomField>