unpackaged/main/default/objects/Mandatory_training__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Mandatory trainings (Product)</relationshipLabel>
    <relationshipName>Mandatory_trainings1</relationshipName>
    <type>Lookup</type>
</CustomField>