unpackaged/main/default/objects/Mandatory_training__c/listViews/All_Mandatory_Trainings.listView-meta.xml
<ListView>
    <fullName>All_Mandatory_Trainings</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Formation__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mandatory Trainings</label>
</ListView>